--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,66 @@
     --grey: #858585;
 }
 
+/*Estilos generales*/
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
+    font-family: 'Stardos Stencil', cursive;
+}
+
+a {
+    text-decoration: none;
+    color: var(--black);
+}
+
+/*Header*/
+.header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    max-height: 100px;
+    background-color: var(--primary-color);
+}
+
+.header__logo-container {
+    height: auto;
+    margin: 3px;
+}
+
+.header__logo {
+    max-width: 100%;
+    height: 70px;
+}
+
+.header__navBar-container {
+    align-self: flex-end;
+    margin-right: 15px;
+}
+
+.header__list-container {
+    display: flex;
+    list-style: none;
+}
+
+.header__item-navBar {
+    margin: 5px;
+    padding: 5px;
+}
+
+.header__item-navBar a:hover {
+    color: var(--white);
+}
+
+.header__item-navBar--pipe::before {
+    content: "| ";
 }
