--- a/css/juan.css
+++ b/css/juan.css
@@ -1,1 +1,12 @@
+header {
+   background-color: #32B7B7;
+   margin: auto;
+   display: flex;
+   justify-content: space-between;
+   } 
+   
+   
+  
+
+
 
