--- a/css/manuel.css
+++ b/css/manuel.css
@@ -5,6 +5,8 @@
     --white: #FAFAFA;
     --black: #0E0D0D;
     --grey: #858585;
+    --shadow-input: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    --shadow-container: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
 /*Estilos generales*/
@@ -26,6 +28,14 @@ body {
 a {
     text-decoration: none;
     color: var(--black);
+}
+
+input {
+    border: none;
+}
+
+select {
+    border: none;
 }
 
 /*Header*/
@@ -69,4 +79,68 @@ a {
 
 .header__item-navBar--pipe::before {
     content: "| ";
+}
+
+/*main*/
+main {
+    width: 100%;
+    height: 80vh;
+    background-color: var(--terciary-color);
+}
+
+/*Searcher*/
+.searcher{
+    width: 400px;
+    /*height: 400px;*/
+    height: auto;
+    padding: 20px 15px;
+    background-color: var(--white);
+    box-shadow: var(--shadow-container);
+    border-radius: 20px;
+}
+
+.searcher__title{
+    margin-bottom: 15px;
+}
+
+.searcher__options-container {
+    margin: 20px 0;
+}
+
+.searcher__options-container__date {
+    display: flex;
+    justify-content: space-between;
+}
+
+.searcher__option-title__date {
+    width: 47%;
+}
+
+.searcher__option-title__date input{
+    padding: 0 5px;
+}
+
+.searcher__option-title {
+    margin-bottom: 5px;
+    font-size: 1.8rem;
+}
+
+.searcher__input{
+    /*height: 35px;*/
+    height: 45px;
+    width: 100%;
+    background-color: var(--terciary-color);
+    box-shadow: var(--shadow-input);
+}
+
+.searcher__button {
+    width: 100%;
+    height: 50px;
+    margin: 8px 0;
+    font-family: inherit;
+    font-size: 2.5rem;
+    font-weight: bold;
+    background-color: var(--primary-color);
+    box-shadow: var(--shadow-input);
+    border-radius: 30px;
 }
