--- a/css/manuel.css
+++ b/css/manuel.css
@@ -88,10 +88,17 @@ main {
     background-color: var(--terciary-color);
 }
 
+.main-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
 /*Searcher*/
 .searcher{
     width: 400px;
-    /*height: 400px;*/
+    /*height: 475px;*/
     height: auto;
     padding: 20px 15px;
     background-color: var(--white);
@@ -143,4 +150,29 @@ main {
     background-color: var(--primary-color);
     box-shadow: var(--shadow-input);
     border-radius: 30px;
+    cursor: pointer;
+}
+
+/*Category*/
+.category {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 400px;
+    height: auto;
+    text-align: center;
+}
+
+.category__card {
+    width: 300px;
+    height: 100px;
+    margin: 24px 0;
+    font-size: 2.2rem;
+    line-height: 100px;
+    text-align: center;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--black);
+    box-shadow: var(--shadow-container);
+    border-radius: 15px;
 }
