--- a/css/manuel.css
+++ b/css/manuel.css
@@ -43,7 +43,8 @@ select {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: auto;
+    /*height: auto;*/
+    height: 10vh;
     max-height: 100px;
     background-color: var(--primary-color);
 }
@@ -84,7 +85,7 @@ select {
 /*main*/
 main {
     width: 100%;
-    height: 80vh;
+    height: 82vh;
     background-color: var(--terciary-color);
 }
 
@@ -175,4 +176,16 @@ main {
     border: 2px solid var(--black);
     box-shadow: var(--shadow-container);
     border-radius: 15px;
+}
+
+/*footer*/
+footer {
+    width: 100%;
+    height: 8vh;
+    background-color: var(--primary-color);
+}
+
+.social-media__logo {
+    width: 48px;
+    height: 48px;
 }
