--- a/css/manuel.css
+++ b/css/manuel.css
@@ -180,12 +180,15 @@ main {
 
 /*footer*/
 footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 8vh;
     background-color: var(--primary-color);
 }
 
-.social-media__logo {
-    width: 48px;
-    height: 48px;
+.social-media,
+.footer__icon-copyright {
+    margin: 0 15px;
 }
