--- a/css/manuel.css
+++ b/css/manuel.css
@@ -56,7 +56,7 @@ select {
 
 .header__logo {
     max-width: 100%;
-    height: 70px;
+    height: 9vh;
 }
 
 .header__navBar-container {
@@ -134,7 +134,6 @@ main {
 }
 
 .searcher__input{
-    /*height: 35px;*/
     height: 45px;
     width: 100%;
     background-color: var(--terciary-color);
