--- a/css/juan.css
+++ b/css/juan.css
@@ -5,6 +5,7 @@ header {
    justify-content: space-between;
    align-items: flex-end;
    max-width: 1460px;
+   min-width: 100%;
    
 } 
 
@@ -51,7 +52,6 @@ a {
 
 
 
-
 /* .body {
    background-color: #E8E8E8;
 
@@ -77,17 +77,21 @@ a {
    top: -269px;
    border-radius: 0px;
    margin: auto;
-   padding: 10px;
+   /* padding: 10px; */
    display: flex;
    flex-direction: column;
-   
+
+   width: 100%;
 
 }
+
+
 
 body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+
 }
 
 
@@ -221,6 +225,7 @@ footer {
    display: flex;
    justify-content: space-between;
    width: 1460px;
+   min-width: 100%;
 }
 
 
