--- a/css/juan.css
+++ b/css/juan.css
@@ -101,13 +101,14 @@ body {
    margin: auto;
    /* padding: 25px; */
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* right: 500px; tenia este*/
-   right: 350px;
+   right: 450px;
    top: 150px;
 
  
@@ -119,13 +120,14 @@ body {
    /* padding: 25px; */
    margin: auto;
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* right: 500px; */
-   right: 350px;
+   right: 450px;
    top: 300px;
  
 }
@@ -136,13 +138,14 @@ body {
    /* padding: 25px; */
    margin: auto;
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* right: 500px; */
-   right: 350px;
+   right: 450px;
    top: 450px;
     }
 
@@ -152,13 +155,14 @@ body {
    /* padding: 25px; */
    margin: auto;
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* left: 500px; tenia este*/
-   left: 350px;
+   left: 450px;
    bottom: 645px;
     }
 
@@ -168,13 +172,14 @@ body {
    /* padding: 25px; */
    margin: auto;
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* left: 500px; */
-   left: 350px;
+   left: 450px;
    bottom: 495px;
     }
 
@@ -184,35 +189,44 @@ body {
    /* padding: 25px; */
    margin: auto;
    border: 1px solid white;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    text-align: left;
    padding: 10px;
    position: relative;
    /* left: 500px; */
-   left: 350px;
+   left: 450px;
    bottom: 345px;
     }
 
 .flex-container {
    margin: auto;
-   width: 15%;
-   height: 5%;
+   /* width: 15%;
+   height: 5%; */
+   width: 200px;
+   height: 30px;
    position: relative;
-   bottom: 300px;
+   bottom: 270px;
    display: flex;
    justify-content: space-between;
    padding: 0.5px;
    font-weight: bold;
    border: 1px solid #E8E8E8;
+   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
    border-radius: 15px;
    background-color: white;
    
 }
 
+.number {
+   position: relative;
+   bottom: 20px;
+}
+
 .icon-litle { 
    position: relative;
-   top: 30px;
+   top: 8px;
 }
 
 
