--- a/css/juan.css
+++ b/css/juan.css
@@ -16,10 +16,14 @@ header {
   
    align-items: center;
 
-   
+   margin: 10px;
 
-   
 
+
+}
+
+.barra::before {
+   content: "| ";  
 }
 
 .items {
@@ -36,6 +40,7 @@ header {
    margin: auto 10px;
    text-decoration: none;
    list-style: none; /* quita el estilo de la lista por defecto (los puntos) */
+   
    
    
    
