--- a/css/juan.css
+++ b/css/juan.css
@@ -88,6 +88,8 @@ a {
 
    width: 100%;
 
+   
+
 }
 
 
@@ -215,7 +217,7 @@ body {
    bottom: 270px;
    display: flex;
    justify-content: space-between;
-   padding: 0.5px;
+   padding: 8px;
    font-weight: bold;
    border: 1px solid #E8E8E8;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
@@ -267,6 +269,8 @@ footer {
    align-items: center;
    /*font-size: 4rem;*/
    /*max-width: 20%;*/
+
+   margin: 0 10px;
 
 }
 
