--- a/css/dam.css
+++ b/css/dam.css
@@ -1,1 +1,302 @@
+:root {
+    --primary-color: #32B7B7;
+    --secondary-color: #ADD7D7;
+    --terciary-color: #E8E8E8;
+    --white: #FAFAFA;
+    --black: #0E0D0D;
+    --grey: #858585;
+}
+
+/*Estilos generales*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 1;
+    position: relative;
+    width: 1440px;
+    height: 1024px;
+}
+body {
+    font-size: 1.6rem;
+    display: flex;
+}
+
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    max-height: 100px;
+    background-color: var(--primary-color);
+}
+
+.header__logo-container {
+    height: auto;
+    margin: 3px;
+}
+
+.header__logo {
+    max-width: 100%;
+    height: 70px;
+}
+
+.header__navBar-container {
+    align-self: flex-end;
+    margin-right: 15px;
+}
+
+.header__list-container {
+    display: flex;
+    list-style: none;
+}
+
+.header__item-navBar {
+    margin: 5px;
+    padding: 5px;
+}
+
+.header__item-navBar a:hover {
+    color: var(--white);
+}
+
+
+.nav-link {
+    position: absolute;
+    width: 64px;
+    height: 17px;
+    left: 1356px;
+    top: 60px;
+    font-family: 'Stardos Stencil';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: var(--black);
+}
+h1 {
+    position: absolute;
+    width: 1267px;
+    height: 146px;
+    left: 19px;
+    top: 100px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 73px;
+    color: var(--black);
+}
+h2 {
+    position: absolute;
+    width: 696px;
+    height: 238px;
+    left: 16px;
+    top: 356px;
+    font-family: 'Stardos Stencil';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 34px;
+    color: var(--black);
+}
+form {
+    position: absolute;
+    width: 577px;
+    height: 588px;
+    left: 847px;
+    top: 284px;
+    background: var(--white);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+    border-radius: 30px;
+}
+.mb-2 {
+    /* Nombre: */
+
+
+position: absolute;
+width: 166px;
+height: 28px;
+left: 14px;
+top: 80px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 34px;
+
+/* black */
+
+color: #0E0D0D;
+}
+#name {
+    /* Rectangle 4 */
+
+
+position: absolute;
+width: 336px;
+height: 47px;
+left: 192px;
+
+/* white */
+
+background: #FAFAFA;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 12px;
+}
+.mb-3 {
+    /* Email: */
+
+
+position: absolute;
+width: 83px;
+height: 34px;
+left: 14px;
+top: 141px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 34px;
+/* identical to box height */
+
+
+/* black */
+
+color: #0E0D0D;
+}
+#exampleInputEmail1 {
+    /* Rectangle 5 */
+
+
+position: absolute;
+width: 336px;
+height: 47px;
+left: 192px;
+
+/* white */
+
+background: #FAFAFA;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 12px;
+}
+.mb-4 {
+    /* Teléfono: */
+
+
+position: absolute;
+width: 128px;
+height: 34px;
+left: 15px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 34px;
+/* identical to box height */
+
+
+/* black */
+
+color: #0E0D0D;
+
+}
+#Telefono {
+    position: absolute;
+width: 336px;
+height: 47px;
+left: 192px;
+/* white */
+
+background: #FAFAFA;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 12px;
+}
+#msj {
+
+    /* input-coment */
+    position: absolute;
+    width: 284px;
+    height: 211px;
+    left: 218px;
+
+    /* white */
+
+    background: #FAFAFA;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 12px;
+}
+.mb-5 {
+
+    /* Comentario: */
+ 
+ 
+ position: absolute;
+ width: 170px;
+ height: 34px;
+ left: 15px;
+ top: 275px;
+ 
+ font-family: 'Inter';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 28px;
+ line-height: 34px;
+ /* identical to box height */
+ 
+ 
+ /* black */
+ 
+ color: #0E0D0D;
+ 
+ }
+ button {
+    /* Rectangle 8 */
+
+
+position: absolute;
+width: 688px;
+height: 69px;
+left: 16px;
+top: 663px;
+
+/* Primary-color */
+
+background: #32B7B7;
+/* shadow */
+
+box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+border-radius: 30px;
+ }
+.btn btn-primary{
+    /* Enviar */
+
+
+position: absolute;
+width: 120px;
+height: 56px;
+left: 300px;
+
+
+font-family: 'Langar';
+font-style: normal;
+font-weight: 400;
+font-size: 40px;
+line-height: 56px;
+/* identical to box height */
+
+
+/* black */
+
+color: #0E0D0D;
+
+
+}
+
 
