--- a/css/dam.css
+++ b/css/dam.css
@@ -59,15 +59,14 @@
 }
 
 main {
+    height: 120vh;
     width: 100%;
-    height: 82vh;
-    background-color: var(--terciary-color);
 }
 
 .nav-link {
     display: flex;
     position: absolute;
-    width: 64px;
+    width: 100%;
     height: 17px;
     left: 1356px;
     top: 60px;
@@ -81,7 +80,7 @@ main {
 
 h1 {
     position: absolute;
-    width: 1267px;
+    width: 100%;
     height: 146px;
     left: 19px;
     top: 100px;
@@ -110,9 +109,9 @@ h2 {
 form {
     position: absolute;
     width: 577px;
-    height: 588px;
-    left: 847px;
-    top: 284px;
+    height:620px;
+    left: 800px;
+    top: 250px;
     background: var(--white);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
     border-radius: 30px;
@@ -271,9 +270,8 @@ border-radius: 12px;
 
 .searcher__button {
     /* Enviar */
-    width: 545px;
+    width: 500px;
     height: 69px;
-    margin: 8px 0;
     font-family: 'Langar';
     font-size: 2.5rem;
     background-color: var(--primary-color);
@@ -283,10 +281,42 @@ border-radius: 12px;
 
 footer {
     background-color: #32B7B7;
-    /* margin: center; tenia este*/
     margin: auto;
     display: flex;
     justify-content: space-between;
-    width: 1460px;
+    width: 100%;
     min-width: 100%;
 }
+.icon2 {
+    min-width: 3%;
+    font-size: 3rem;
+ 
+ }
+ 
+ .icon2 img {
+    width: 25px;
+    height: 25px;
+ }
+ .icon3 {
+
+    background-color: #32B7B7;
+    display: flex;
+    align-items: center;
+    margin: 0 10px;
+ 
+ }
+ 
+ .icon3 img {
+    min-width: 45px;
+    min-height: 45px;
+ }
+ 
+ .items3 {
+    text-decoration: none;
+    list-style: none;
+ }
+ 
+ .items3 img {
+    width: 30px;
+ 
+ }
