--- a/css/manuel.css
+++ b/css/manuel.css
@@ -40,6 +40,7 @@ select {
 
 /*Header*/
 .header {
+    position: relative;
     display: flex;
     justify-content: space-between;
     width: 100%;
