--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
     --white: #FAFAFA;
     --black: #0E0D0D;
     --grey: #858585;
+    --shadow-input: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    --shadow-container: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
 
 /*Estilos generales*/
@@ -12,4 +14,99 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+.inactive {
+    display: none;
+}
+
+/*Login*/
+.login-container {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.9);
+}
+
+.login {
+    /*position: absolute;
+    top: 100px;
+    left: calc(50% - 225px);*/
+    width: 450px;
+    /*height: 475px;*/
+    height: auto;
+    padding: 20px 15px;
+    background-color: var(--terciary-color);
+    box-shadow: var(--shadow-container);
+    border-radius: 20px;
+    border: 6px solid var(--primary-color);
+}
+
+.login__icon-container {
+    width: 100%;
+    text-align: end;
+}
+
+.login__icon {
+    width: 37px;
+    height: 37px;
+}
+
+.login__form {
+    width: 100%;
+}
+
+.login__input-container {
+    width: 360px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.login__title {
+    margin: 40px 0;
+    text-align: center;
+    font-size: 3.5rem;
+    font-family: Inter;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.login__input-title {
+    margin-bottom: 10px;
+    font-size: 1.8rem;
+    font-family: Inter;
+    font-weight: 700;
+    color: var(--black);
+}
+
+.login__input {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 12px;
+    border-radius: 12px;
+    padding: 10px;
+    background: var(--white, #FAFAFA);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10);
+}
+
+.login__button {
+    width: 100%;
+    height: 50px;
+    margin: 8px 0;
+    font-family: inherit;
+    font-size: 2.5rem;
+    font-weight: bold;
+    background-color: var(--primary-color);
+    box-shadow: var(--shadow-input);
+    border-radius: 30px;
+    cursor: pointer;
 }
