--- a/css/dam.css
+++ b/css/dam.css
@@ -110,7 +110,7 @@ form {
     width: 577px;
     height:620px;
     left: 800px;
-    top: 250px;
+    top: 230px;
     background: var(--white);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
     border-radius: 30px;
@@ -258,6 +258,7 @@ color: #0E0D0D;
  }
 
 .searcher__button {
+    position: relative;
     width: 500px;
     height: 69px;
     font-family: 'Langar';
