--- a/css/dam.css
+++ b/css/dam.css
@@ -52,6 +52,11 @@
 .header__item-navBar a:hover {
     color: var(--white);
 }
+
+.header__item-navBar::before {
+    content: "| ";
+}
+
 a {
     text-decoration: none;
     color: var(--black);
